Fix for scrollbars on top navigation bar

--- a/craft/templates/assets/css/main.css
+++ b/craft/templates/assets/css/main.css
@@ -463,7 +463,7 @@ footer {
 .nav {
   margin: 0 20px 0 0;
   display: inherit;
-  overflow: scroll;
+  /*overflow: scroll;*/
 }
 .nav li {
   display: block;
